# my_notes_service

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: __init__.py  config.py  logger.py
app/tasks/: __init__.py  item_params.py
app/utils/: file_writing.py  utils.py
docs/: architecture.md  operations.md  rules.md
scripts/: run.sh
